fix: unset overflow-auto for <p>
在 Chrome 上这个 overflow-auto 造成了一些非常奇怪的 scroll width 和
bounding rect width 相差不到 1px 的 scrollbar，不知道是什么原因。

这个 overflow-auto 如果我没记错的话唯一的作用就是处理 inline math 过长，
正确的解决方式应该是，不写过长的 inline math（
我把所有页面都测试了一遍，只有一处在 330px 的屏幕宽度下会溢出，已修复。

[log skip]

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -12,16 +12,6 @@
     @apply text-initial sm:text-inherit;
   }
 
-  blockquote {
-    @apply font-kai;
-  }
-
-  p {
-    // The padding of <code> may overflow.
-    // See also: https://stackoverflow.com/a/6433475
-    @apply overflow-x-auto overflow-y-hidden;
-  }
-
   p,
   h1,
   h2,
@@ -62,8 +52,9 @@
   }
 
   blockquote {
-    @apply bg-area shadow-sm;
-    @apply px-6 overflow-auto b-l-6 b-gray-4 dark:b-gray-11;
+    @apply font-kai bg-area shadow-sm;
+    @apply px-6 b-l-6 b-gray-4 dark:b-gray-11;
+    @apply overflow-y-auto; // avoid margin-collapsing
 
     blockquote {
       @apply bg-nested b-gray-3 dark:b-gray-10 shadow;
